# SortOptimTask

./: CMakeLists.txt  README.md
.github/workflows/: cmake-gcc.yaml
src/: CMakeLists.txt  hash_map.h
test/: CMakeLists.txt  test.cpp
